[package]
name = "random_struct_layout"
authors = ["Iwancof <rock.iwnacof@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "The custom attributes to randomize struct members layout"
categories = ["no-std"]
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "README.md"]
repository = "https://github.com/Iwancof/random_struct_layout/"
keywords = ["security", "attribute", "macro", "obfuscation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["full"]}
proc-macro2 = "*"
quote = "*"
rand = "*"
